# network-sniffer

./: .gitignore  CMakeLists.txt  README.md  openwrt-sniffer
include/: main.h  server.h  sniffer.h
scripts/: cross-compile-openwrt.sh
src/: main.c  server.c  sniffer.c
test/: CMakeLists.txt  hello_world.c  toolchain.cmake
